adding create card functionality

--- a/App/index.html
+++ b/App/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Your Title Here</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="./src/index.css" rel="stylesheet" />
   </head>
 
   <body>
-    <div class="flex justify-center bg-gray-700">
+    <div class="bg-pattern"></div>
+    <div class="flex justify-center">
       <div id="root"></div>
       <script type="module" src="/src/main.jsx"></script>
     </div>
