--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Title Here</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./src/index.css" rel="stylesheet" />
-  </head>
 
-  <body>
-    <div class="bg-pattern"></div>
-    <div class="flex justify-center">
-      <div id="root"></div>
-      <script type="module" src="/src/main.jsx"></script>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your Title Here</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="./src/index.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="bg-pattern "></div>
+  <div class="flex justify-center">
+    <div class="w-1/3" id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </div>
+</body>
+
 </html>
